# WebShopApp

./: ReadMe.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/tkmrqq/pmsapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NativeLib.cpp  cart_library.cpp  cart_library.h
app/src/main/java/com/tkmrqq/pmsapp/: App.kt  MainActivity.kt
app/src/main/java/com/tkmrqq/pmsapp/data/: AppDatabase.kt  CartViewModelFactory.kt  DatabaseBuilder.kt
app/src/main/java/com/tkmrqq/pmsapp/data/dao/: CartDao.kt  OrderDao.kt  ProductDao.kt
app/src/main/java/com/tkmrqq/pmsapp/data/model/: CartItem.kt  CartLibrary.java  Order.kt  Product.kt
app/src/main/java/com/tkmrqq/pmsapp/data/repository/: CartManager.kt  OrderManager.kt
app/src/main/java/com/tkmrqq/pmsapp/ui/adapter/: CartAdapter.kt  CartItemAdapter.kt  OrderAdapter.kt  ProductAdapter.kt
app/src/main/res/color/: nav_item_color.xml
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: account_screen.xml  activity_login.xml  activity_main.xml  cart_screen.xml  fragment_product_detail.xml  home_screen.xml  item_cart_item.xml  item_cart_product.xml  item_order.xml  item_product.xml  product_screen.xml  recycler_view_item.xml  signup_screen.xml
app/src/main/res/layout-land/: account_screen.xml  cart_screen.xml  product_screen.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/test/java/com/tkmrqq/pmsapp/: ExampleUnitTest.kt
(+16 files in other folders)
